--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                                 />
                             </div>
                             <div class="team-content pt-4">
-                                <h4>Jan Novák</h4>
+                                <h4>James Carter</h4>
                                 <p>Business Coach</p>
                             </div>
                         </div>
@@ -589,7 +589,7 @@
                                 />
                             </div>
                             <div class="team-content pt-4">
-                                <h4>Petr Svoboda</h4>
+                                <h4>Michael Brooks</h4>
                                 <p>Leadership Development Coach</p>
                             </div>
                         </div>
@@ -607,7 +607,7 @@
                                 />
                             </div>
                             <div class="team-content pt-4">
-                                <h4>Michal Dvořák</h4>
+                                <h4>John Bennett</h4>
                                 <p>Corporate Strategy Coach</p>
                             </div>
                         </div>
@@ -625,7 +625,7 @@
                                 />
                             </div>
                             <div class="team-content pt-4">
-                                <h4>Tomáš Horák</h4>
+                                <h4>David Anderson</h4>
                                 <p>Business Growth Specialist</p>
                             </div>
                         </div>
