--- a/testimonial.html
+++ b/testimonial.html
@@ -206,7 +206,7 @@
                                 alt=""
                             />
                             <div class="ms-4">
-                                <h4>Anna Křížová</h4>
+                                <h4>Anna Smith</h4>
                                 <div class="d-flex text-primary">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -239,7 +239,7 @@
                                 alt=""
                             />
                             <div class="ms-4">
-                                <h4>Jan Novák</h4>
+                                <h4>Jan Novak</h4>
                                 <div class="d-flex text-primary">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -274,7 +274,7 @@
                                 alt=""
                             />
                             <div class="ms-4">
-                                <h4>Eva Šebková</h4>
+                                <h4>Eva Tompson</h4>
                                 <div class="d-flex text-primary">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
